--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FUMITEC</title>
+    <title>Fumitec Paraguay - Fumigación Empresarial e Industrial</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="Fumigacion, Termitas, kupii, empresa, cucarachas" name="keywords">
+    <meta content="Fumigación y Control de plagas en Paraguay. Servicios en ambientes empresariales, industriales y comerciales, complejos habitacionales" name="description">
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,10 +31,10 @@
         <!-- Spinner End -->
         
         <!-- Navbar & Hero Start -->
-        <div class="container-fluid p-0 fondo-blanco" >
+        <header class="container-fluid p-0 fondo-blanco" >
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0" style="background-color: white;">
                 <a href="" class="navbar-brand p-0">
-                    <img src="img/fumitec-logo-.png" alt="Logo"> 
+                    <img src="img/fumitec-logo-.png" alt="Logo" title="Logo-fumitec"> 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -53,7 +53,7 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-primary mb-4 animated zoomIn textsize">fumigación y control de plagas en paraguay</h1>
+                            <h1 class="text-primary mb-4 animated zoomIn textsize">Fumigación y control de plagas en paraguay</h1>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <div class="phonenumber">
@@ -66,29 +66,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
         <!-- Navbar & Hero End -->
 
-        <!-- Full Screen Search Start -->
-        <div class="modal fade" id="searchModal" tabindex="-1">
-            <div class="modal-dialog modal-fullscreen">
-                <div class="modal-content" style="background: rgba(29, 29, 39, 0.7);">
-                    <div class="modal-header border-0">
-                        <button type="button" class="btn bg-white btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body d-flex align-items-center justify-content-center">
-                        <div class="input-group" style="max-width: 600px;">
-                            <input type="text" class="form-control bg-transparent border-light p-3" placeholder="Type search keyword">
-                            <button class="btn btn-light px-4"><i class="bi bi-search"></i></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Full Screen Search End -->
-
         <!-- About Start -->
-        <div class="container-xxl py-5">
+        <section class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -102,17 +84,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- About End -->
 
         <!-- Service Start -->
-        <div class="container-xxl py-5">
+        <section class="container-xxl py-5">
             <div class="container px-lg-6">
                 <div class="row g-2 justify-content-center">
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column align-items-center text-center rounded py-1">
                             <div class="service-icon flex-shrink-0">
-                            <img src="img/insecto.png" alt="insecto" width="40%">
+                            <img src="img/insecto.png" alt="insecto" width="40%" title="insecto">
                             </div>
                             <h5 class="mb-3">FUMIGACIÓN CONTRA INSECTOS</h5>
                             <p><b>Control general de insectos voladores (mosquitos, moscas, etc) y rastreros (hormigas, cucarachas, etc)</b> mediante técnicas de pulverización en superficies con rociadores y fumigación termonebulizado</p>
@@ -121,7 +103,7 @@
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column align-items-center text-center rounded py-2">
                             <div class="service-icon flex-shrink-0">
-                                <img src="img/raton.png" alt="insecto" width="60%" >
+                                <img src="img/raton.png" alt="Raton" width="60%" >
                             </div>
                             <h5 class="mb-3">CONTROL DE ROEDORES</h5>
                             <p><b>Control de roedores mediante implementación de programas de cebado</b> para ratas de tejado (Rattus rattus), ratas australianas (Apodemus sylvaticus) y ratón común o laucha (Mus musculus)</p>
@@ -130,7 +112,7 @@
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                         <div class="service-item d-flex flex-column align-items-center text-center rounded py-2">
                             <div class="service-icon flex-shrink-0">
-                                <img src="img/mascara-de-gas.png" alt="insecto" width="50%" >
+                                <img src="img/mascara-de-gas.png" alt="Mascara de gas" width="50%" title="mascara-de-gas" >
                             </div>
                             <h5 class="mb-3">DESINFECCIÓN</h5>
                             <p>Desinfección (anti viral bacterial) mediante la aplicación de desinfectantes con utilización de pulverizadores y atomizadores</p>
@@ -139,7 +121,7 @@
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column align-items-center text-center rounded py-2">
                             <div class="service-icon flex-shrink-0">
-                                <img src="img/termita.png" alt="insecto" width="50%" >
+                                <img src="img/termita.png" alt="Termita" width="50%" title="termita">
                             </div>
                             <h5 class="mb-3">FUMIGACIÓN-CONTROL DE TERMITAS O KUPI´I</h5>
                             <p>Tratamientos integrales contra termitas subterráneas y de madera seca</p>
@@ -147,15 +129,15 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </section> 
         <!-- Service End -->
 
         <!-- Newsletter Start -->
-        <div class="container-fluid newsletter my-5 wow fadeInUp bg-light" data-wow-delay="0.1s">
+        <article class="container-fluid newsletter my-5 wow fadeInUp bg-light" data-wow-delay="0.1s">
             <div class="container px-lg-5">
                 <div class="row align-items-center" style="height: 450px;">
                     <div class="col-md-4 text-center mb-n5 d-none d-md-block">
-                        <img class="img-fluid mt-5 animated fadeIn" style="height: 250px;" src="img/fumigador-grano.jpeg">
+                        <img class="img-fluid mt-5 animated fadeIn" style="height: 250px;" src="img/fumigador-grano.jpeg" alt="fumigador-grano">
                     </div>
                     <div class="col-12 col-md-8">
                         <h3 class="text-primary">FUMIGACIÓN CONTRA PLAGAS DE GRANOS ALMACENADOS</h3>
@@ -172,9 +154,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </article>
 
-        <div class="container-fluid  my-5 wow fadeInUp " data-wow-delay="0.1s">
+        <article class="container-fluid  my-5 wow fadeInUp " data-wow-delay="0.1s">
             <div class="container px-lg-5">
                 <div class="row align-items-center" style="height: 250px;">
                     <div class="col-12 col-md-8">
@@ -189,12 +171,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </article>
         <!-- Newsletter End -->
 
         <!-- Planes Start -->
         <hr class="red-line">
-        <div class="container-xxl py-4">
+        <section class="container-xxl py-4">
             <div class="container px-lg-">
                 <h3 class="text-primary">DISEÑAMOS E IMPLEMENTAMOS PLANES DE FUMIGACIÓN</h3>
                 <small class="text-dark">Sin duda, la mejor forma de mantener libre de plagas una empresa es  mediante el diseño y aplicación de planes consistentes y personalizados  que permiten controlar de forma efectiva y permanente plagas como  cucarachas alemanas, americanas o orientales, termitas y roedores.  Además, el diseño de planes de fumigación o control de plagas ofrece  diversas ventajas como;</small>   
@@ -203,7 +185,7 @@
                     <div class="col-lg-3 col-md-4 wow zoomIn" data-wow-delay="0.1s">
                         <div class="planes-item d-flex flex-column align-items-center text-center rounded py-2 pt-5">
                             <div class="planes-icon flex-shrink-0">
-                            <img src="img/editar.png" alt="insecto" width="15%" >
+                            <img src="img/editar.png" alt="icono editar" width="15%" title="icono editar" >
                             </div>
                             <h5 class="mb-3">REGISTROS</h5>
                             <p>Implementación de registro de fecha de fumigación o aplicación, productos aplicados y plagas identificadas.</p>
@@ -212,7 +194,7 @@
                     <div class="col-lg-3 col-md-4 wow zoomIn" data-wow-delay="0.3s">
                         <div class="planes-item d-flex flex-column align-items-center text-center rounded py-2 pt-5">
                             <div class="planes-icon flex-shrink-0">
-                                <img src="img/insecticida.png" alt="insecto" width="20%" >
+                                <img src="img/insecticida.png" alt="insecticida" width="20%" title="insecticida">
                             </div>
                             <h5 class="mb-3">CONTROL INTEGRAL</h5>
                             <p>La implementación de planes de fumigación permite integrar controles oportunos y efectivos resultando en un control permanente y reduciendo la utilización de productos químicos.</p>
@@ -221,7 +203,7 @@
                     <div class="col-lg-3 col-md-4 wow zoomIn" data-wow-delay="0.6s">
                         <div class="planes-item d-flex flex-column align-items-center text-center rounded py-5 pt-5">
                             <div class="planes-icon flex-shrink-0">
-                                <img src="img/ahorra-energia.png" alt="insecto" width="15%" >
+                                <img src="img/ahorra-energia.png" alt="ahorra-energia" width="15%" title="ahorra-energia" >
                             </div>
                             <h5 class="mb-3">AHORRO ECONOMICO</h5>
                             <p>Importantes descuentos en implementación de planes y contratos de trabajo  de control control de plagas y/o fumigación.</p>
@@ -229,37 +211,37 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </section> 
         <!-- Service End -->
         <br><br><br>
-        <div class="container-fluid py-5  bg-light text-center">
+        <section class="container-fluid py-5  bg-light text-center">
             <div class="container px-lg-5">
                 <div class="section-title position-relative mb-4 pb-2">
                     <h2 class="position-relative text-primary ps-4">SERVICIOS DE FUMIGACIÓN Y CONTROL DE PLAGAS PARA</h2>
                 </div>
                 <div class="row g-3 align-items-center">
                     <div class="col-sm-4">
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/fabrica.png" alt="insecto" width="7%" class="mr-2"> Industrias</h5>
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/centro-comercial.png" alt="insecto" width="7%" class="mr-2"> Centros Comerciales</h5>
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/hockey-de-aire.png" alt="insecto" width="7%" class="mr-2"> Predios Sociales y Recreativos</h5>
-                        <h5 class="mb-0 d-flex align-items-center"><img src="img/embarcacion.png" alt="insecto" width="7%" class="mr-2"> Embarcaciones</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/fabrica.png" alt="fabrica" width="7%" class="mr-2"> Industrias</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/centro-comercial.png" alt="centro-comercial" width="7%" class="mr-2"> Centros Comerciales</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/hockey-de-aire.png" alt="hockey-de-aire" width="7%" class="mr-2"> Predios Sociales y Recreativos</h5>
+                        <h5 class="mb-0 d-flex align-items-center"><img src="img/embarcacion.png" alt="embarcacion" width="7%" class="mr-2"> Embarcaciones</h5>
                     </div>
                     <div class="col-sm-4">
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/edificio-del-hospital.png" alt="insecto" width="7%" class="mr-2"> Puestos de Salud</h5>
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/agronomia.png" alt="insecto" width="7%" class="mr-2"> Agroindustrias</h5>
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/restaurante.png" alt="insecto" width="7%" class="mr-2"> Locales Gastronómicos</h5>
-                        <h5 class="mb-0 d-flex align-items-center"><img src="img/escuela.png" alt="insecto" width="7%" class="mr-2"> Instituciones Educativas</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/edificio-del-hospital.png" alt="edificio-del-hospital" width="7%" class="mr-2"> Puestos de Salud</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/agronomia.png" alt="agronomia" width="7%" class="mr-2"> Agroindustrias</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/restaurante.png" alt="restaurante" width="7%" class="mr-2"> Locales Gastronómicos</h5>
+                        <h5 class="mb-0 d-flex align-items-center"><img src="img/escuela.png" alt="escuela" width="7%" class="mr-2"> Instituciones Educativas</h5>
                     </div>
                     <div class="col-sm-4">
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/silo.png" alt="insecto" width="7%" class="mr-2"> Silos</h5>
-                        <h5 class="mb-4 d-flex align-items-center"><img src="img/edificios.png" alt="insecto" width="7%" class="mr-2"> Edificios Corporativos</h5>
-                        <h5 class="mb-0 d-flex align-items-center"><img src="img/deposito.png" alt="insecto" width="7%" class="mr-2"> Depósitos y Almacenes</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/silo.png" alt="silo" width="7%" class="mr-2"> Silos</h5>
+                        <h5 class="mb-4 d-flex align-items-center"><img src="img/edificios.png" alt="edificios" width="7%" class="mr-2"> Edificios Corporativos</h5>
+                        <h5 class="mb-0 d-flex align-items-center"><img src="img/deposito.png" alt="deposito" width="7%" class="mr-2"> Depósitos y Almacenes</h5>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Team Start -->
-        <div class="container-xxl py-5">
+        <section class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h2 class="position-relative d-inline text-primary ps-4">Visita nuestro Blog</h2>
@@ -318,12 +300,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Team End -->
         
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <footer class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -401,12 +383,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
         <!-- Footer End -->
 
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
+        <!-- btn whatsapp -->
+        <a href="https://wa.me/+595971681667?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-primary btn-lg-square floating-whatsapp pt-2" target="_blank"><i class="bi bi-whatsapp"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
