--- a/project.html
+++ b/project.html
@@ -292,7 +292,11 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
+        <div class="floating-whatsapp">
+            <a href="https://wa.me/1234567890" target="_blank">
+                <i class="bi bi-whatsapp"></i>
+            </a>
+          </div>
     </div>
 
     <!-- JavaScript Libraries -->
