--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         
 
         <!-- Footer Start -->
-        <div class="container-fluid text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -348,7 +348,12 @@
 
 
         <!-- btn whatsapp -->
-        <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-primary btn-lg-square floating-whatsapp pt-2" target="_blank"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank">
+            <i class="bi bi-whatsapp wsize"></i>
+        </a>
+        
+
+        <!-- <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank"><i class="bi bi-whatsapp" ></i></a> -->
     </div>
 
     <!-- JavaScript Libraries -->
