control de plagas terminado

--- a/about.html
+++ b/about.html
@@ -48,22 +48,22 @@
                         <div class="col-lg-6 text-center text-lg-start">
                             <div class="row row-cols-3 g-3">
                                 <div class="col">
-                                    <img src="img/fumigador-grano.jpeg" alt="Logo" title="Logo-fumitec" width="100%">
+                                    <img src="img/fumigador-grano.jpeg" alt="Fumigador-grano" title="Fumigador-grano" width="100%">
+                                </div>
+                                <div class="col">
+                                    <img src="img/blanco.png" alt="Imagen" title="Imagen" width="100%">
+                                </div>
+                                <div class="col">
+                                    <img src="img/fumigadores.jpeg" alt="fumigadores" title="fumigadores" width="100%">
                                 </div>
                                 <div class="col">
                                     <img src="img/blanco.png" alt="Imagen 2" title="Imagen 2" width="100%">
                                 </div>
                                 <div class="col">
-                                    <img src="img/fumigadores.jpeg" alt="Imagen 2" title="Imagen 2" width="100%">
+                                    <img src="img/fumigacion-de-barcos.jpg" alt="fumigacion-de-barcos" title="fumigacion-de-barcos" width="100%">
                                 </div>
                                 <div class="col">
-                                    <img src="img/blanco.png" alt="Imagen 2" title="Imagen 2" width="100%">
-                                </div>
-                                <div class="col">
-                                    <img src="img/fumigacion-de-barcos.jpg" alt="Imagen 3" title="Imagen 3" width="100%">
-                                </div>
-                                <div class="col">
-                                    <img src="img/blanco.png" alt="Imagen 2" title="Imagen 2" width="100%">
+                                    <img src="img/blanco.png" alt="fumigacion-de-barcos" title="fumigacion-de-barcos" width="100%">
                                 </div>
                                
                             </div>
