--- a/index.html
+++ b/index.html
@@ -320,11 +320,14 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <h5 class="text-primary mb-4">Solicitar un Presupuesto</h5>
-                        <div class="position-relative w-100 mt-3">
-                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Quiero un presupuesto" style="height: 48px;">
-                            <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
-                        </div>
+                        <form action="enviar_correo.php" method="post">
+                            <h5 class="text-primary mb-4">Solicitar un Presupuesto</h5>
+                            <div class="position-relative w-100 mt-3">
+                                <input name="email" class="form-control border-0 rounded-pill w-100" type="email" placeholder="Tu correo electrónico">
+                                <input name="Presupuesto" class="form-control border-0 rounded-pill w-100 mt-4" type="text" placeholder="Quiero un presupuesto">
+                                <button type="submit" class="btn btn-danger shadow-none position-absolute mt-4">Enviar correo</button>
+                            </div>
+                        </form>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-primary mb-4">Ubicación</h5>
