--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-white fondo-blanco p-0">
+    <main class="container-fluid bg-white fondo-blanco p-0">
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -303,7 +303,7 @@
         
 
         <!-- Footer Start -->
-        <div class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
+        <main class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -352,10 +352,7 @@
             <i class="bi bi-whatsapp wsize"></i>
         </a>
         
-
-        <!-- <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank"><i class="bi bi-whatsapp" ></i></a> -->
-    </div>
-
+    </main>   
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
