--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <section class="container-fluid bg-white p-0">
+    <main class="container-fluid bg-white p-0">
         <!-- Navbar & Hero Start -->
         <header class="container-fluid p-0 fondo-blanco" >
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0" style="background-color: white;">
@@ -69,13 +69,13 @@
                             </div>
                         </div>
                         
-                        <div class="col-lg-6 text-center text-lg-start">
+                        <article class="col-lg-6 text-center text-lg-start">
                             <p class="text-black pb-3 animated zoomIn"><b>FUMITEC FUMIGACIONES EN PARAGUAY FUMITEC</b> es una empresa prestadora de servicios de fumigación y control de plagas en Paraguay. Nos especializamos en trabajos en ambientes empresariales, buscando ofrecer servicios de calidad y agilizando los procesos de aplicación.
                             <br><br>Trabajamos en dos áreas importantes de servicios de fumigación, las de;
                             <br>    – Control de plagas urbanas
                             <br>    – Fumigación/expurgo de granos almacenados</br></p>
                             <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." target="_blank" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Solicitá aquí un programa de control</a>
-                        </div>
+                        </article>
                     </div>
                 </div>
             </section>
@@ -160,7 +160,7 @@
         </section> 
        
         <!-- Footer Start -->
-        <div class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
+        <footer class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -202,6 +202,7 @@
             </div>
         </footer>
         <!-- Footer End -->
+    </main>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
