--- a/service.html
+++ b/service.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <section class="container-fluid bg-white p-0">
+    <main class="container-fluid bg-white p-0">
         <!-- Navbar & Hero Start -->
         <header class="container-fluid p-0 fondo-blanco" >
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0" style="background-color: white;">
@@ -34,8 +34,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link" style="color: black !important;">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link active" style="color: black !important;">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link" style="color: black !important;">Control de Plagas urbanas</a>
+                        <a href="about.html" class="nav-item nav-link" style="color: black !important;">Nosotros</a>
+                        <a href="service.html" class="nav-item nav-link active" style="color: black !important;">Control de Plagas urbanas</a>
                         <a href="project.html" class="nav-item nav-link" style="color: black !important;">Fumigación de Granos Almacenados</a>
                         <a href="contact.html" class="nav-item nav-link" style="color: black !important;">Contacto</a>
                     </div>
@@ -214,7 +214,7 @@
 
 
         <!-- Footer Start -->
-        <div class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
+        <footer class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -231,11 +231,14 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <h5 class="text-primary mb-4">Solicitar un Presupuesto</h5>
-                        <div class="position-relative w-100 mt-3">
-                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Quiero un presupuesto" style="height: 48px;">
-                            <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
-                        </div>
+                        <form action="enviar_correo.php" method="post">
+                            <h5 class="text-primary mb-4">Solicitar un Presupuesto</h5>
+                            <div class="position-relative w-100 mt-3">
+                                <input name="email" class="form-control border-0 rounded-pill w-100" type="email" placeholder="Tu correo electrónico">
+                                <input name="Presupuesto" class="form-control border-0 rounded-pill w-100 mt-4" type="text" placeholder="Quiero un presupuesto">
+                                <button type="submit" class="btn btn-danger shadow-none position-absolute mt-4">Enviar correo</button>
+                            </div>
+                        </form>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-primary mb-4">Ubicación</h5>
@@ -256,6 +259,10 @@
             </div>
         </footer>
         <!-- Footer End -->
+        <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank">
+            <i class="bi bi-whatsapp wsize"></i>
+        </a>
+    </main>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
