--- a/service.html
+++ b/service.html
@@ -34,8 +34,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link" style="color: black !important;">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link active" style="color: black !important;">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link" style="color: black !important;">Control de Plagas urbanas</a>
+                        <a href="about.html" class="nav-item nav-link " style="color: black !important;">Nosotros</a>
+                        <a href="service.html" class="nav-item nav-link active" style="color: black !important;">Control de Plagas urbanas</a>
                         <a href="project.html" class="nav-item nav-link" style="color: black !important;">Fumigación de Granos Almacenados</a>
                         <a href="contact.html" class="nav-item nav-link" style="color: black !important;">Contacto</a>
                     </div>
