--- a/fumigacion-granos.html
+++ b/fumigacion-granos.html
@@ -32,13 +32,13 @@
                     <span class="fa fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto py-0">
+                    <!-- <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link" style="color: black !important;">Inicio</a>
                         <a href="about.html" class="nav-item nav-link " style="color: black !important;">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link " style="color: black !important;">Control de Plagas urbanas</a>
                         <a href="project.html" class="nav-item nav-link active" style="color: black !important;">Fumigación de Granos Almacenados</a>
                         <a href="contact.html" class="nav-item nav-link" style="color: black !important;">Contacto</a>
-                    </div>
+                    </div> -->
                 </div>
             </nav>
 
@@ -155,7 +155,7 @@
                             <div class="col-md-6">
                                 <h6 class="text-primary">Fumigación/expurgo a concentraciones fulminantes</h6>
                                 <strong>Durante el almacenamiento de granos pueden presentarse diversos factores que afectan directamente su calidad, traduciéndose en pérdidas económicas.</strong> Los infestaciones con insectos plagas son el principal factor de deterioro, ya que actualmente se han registrado alrededor de 250 especies de insectos-plaga que afectan productos almacenados, de los cuales 20, de tipo primario, son considerados de gran importancia.
-                                <p><a href="fumigacion-granos.html" class="btn btn-primary mt-3">Saber más</a></p>
+                                <p><a href="#" class="btn btn-primary mt-3">Saber más</a></p>
                             </div>
                             <div class="col-md-6">
                                 <img src="img/insecto-de-granos-almacenados.jpg" alt="insecto-de-granos-almacenado" title="insecto-de-granos-almacenado" class="img-fluid">
