Eliminacion de cucarachas hechas

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <img src="img/cucarachas.jpg" alt="cucarachas" width="100%" >
                             </div>
                             <h5 class="mb-3">Fumigación y control de Cucarachas</h5>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Saber más</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="eliminacion-cucarachas.html">Saber más</a>
                         </article>
                     </div>
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
@@ -175,7 +175,7 @@
                                 <img src="img/cluster_control-de-plagas-urbanas.jpg" alt="plagas urbanas paraguay" width="110%" >
                             </div>
                             <h5 class="mb-3">Fumigación y control de plagas urbanas en Paraguay</h5>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Saber más</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Saber más</a>
                         </article>
                     </div>
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
@@ -193,7 +193,7 @@
                                 <img src="img/cluster_fumigacion-de-granos-almacenados-300x300.jpg" alt="fumigacion de granos" width="100%" >
                             </div>
                             <h5 class="mb-3">Fumigación de granos almacenados en Paraguay</h5>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Saber más</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="project.html">Saber más</a>
                         </article>
                     </div>
 
