--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                         </div>
                         
                         <article class="col-lg-6 text-center text-lg-start">
-                            <p class="text-black pb-3 animated zoomIn"><b>FUMITEC FUMIGACIONES EN PARAGUAY FUMITEC</b> es una empresa prestadora de servicios de fumigación y control de plagas en Paraguay. Nos especializamos en trabajos en ambientes empresariales, buscando ofrecer servicios de calidad y agilizando los procesos de aplicación.
+                            <p class="text-black pb-3 animated zoomIn"><b>FUMITEC FUMIGACIONES EN PARAGUAY</b> es una empresa prestadora de servicios de fumigación y control de plagas en Paraguay. Nos especializamos en trabajos en ambientes empresariales, buscando ofrecer servicios de calidad y agilizando los procesos de aplicación.
                             <br><br>Trabajamos en dos áreas importantes de servicios de fumigación, las de;
                             <br>    – Control de plagas urbanas
                             <br>    – Fumigación/expurgo de granos almacenados</br></p>
