--- a/service.html
+++ b/service.html
@@ -83,7 +83,7 @@
                         <div class="section-title position-relative">
                             <h2 class="mt-2 text-primary text-center"> Fumigación contra cucarachas</h2>
                         </div>
-                        <p class="text-black pb-3 animated zoomIn">A diferencia de lo que muchos pueden pensar, las cucarachas presentan un peligro latente tanto en negocios, empresas y residencias debido a su hábito sigiloso de alimentarse y reproducirse.
+                        <p class="text-black pb-3 animated zoomIn" style="text-align: justify;">A diferencia de lo que muchos pueden pensar, las cucarachas presentan un peligro latente tanto en negocios, empresas y residencias debido a su hábito sigiloso de alimentarse y reproducirse.
                         <br><br>Estos insectos se alimentan prácticamente de todo, y pueden transmitir enfermedades mediante la ingesta de alimentos que hayan estado en contacto con el aparato bucal u otras partes de las cucarachas.
                         <br><br>El hábito sigiloso para desarrollar poblaciones es un peligro latente para la imagen de empresas percibida por clientes y empleados.
                         <br><br>En Paraguay, son muchos los establecimientos donde no se controla lo suficientemente bien como para garantizar la salubridad. El servicio realizado por particulares se caracteriza por la aplicación poco responsable de productos químicos en lugares donde se manipulan alimentos, o se desarrollan normalmente actividades humanas.</p>
@@ -149,7 +149,7 @@
                         <div class="section-title position-relative">
                             <h2 class="mt-2 text-primary text-center">Control de roedores</h2>
                         </div>
-                        <p class="text-black pb-3 animated zoomIn ">
+                        <p class="text-black pb-3 animated zoomIn " style="text-align: justify;">
 
                             Los Roedores – Plaga son los más prósperos y abundantes
                             habitantes del planeta, del cual no disfrutarían sin la ayuda
@@ -173,7 +173,7 @@
                         <div class="section-title position-relative">
                             <h2 class="mt-2 text-primary text-center"> Fumigación y control de termitas</h2>
                         </div>
-                        <p class="text-black pb-3 animated zoomIn">
+                        <p class="text-black pb-3 animated zoomIn" style="text-align: justify;">
 
                         <br><br>Las termitas son los insectos mas temidos y perjudiciales dentro de ambientes urbanos y rurales debido a su gran capacidad de formar colonias superpobladas capaces de devorar estructuras importantes debilitándolas de una forma silenciosa.
                         <br><br>Las termitas, específicamente las subterráneas deben ser identificadas y controladas oportunamente para evitar grande problemas estructurales en edificios, residencias y otros ambientes donde haya madera que puedan consumir.
