--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="section-title position-relative mb-4 pb-2">
                             <h2 class="mt-2 text-primary">CONTROL DE PLAGAS URBANAS</h2>
                         </div>
-                        <p class="mb-4">Como empresa  de servicios buscamos ofrecer, en todo el Paraguay, soluciones mediante fumigación y control de plagas, contra infestaciones de insectos (cucarachas, hormigas, termitas o kupi´i, moscas) y roedores, también, ofrecemos servicios de desinfección de superficies en diversos ambientes industriales y comerciales.</p>    
+                        <p class="mb-4" style="text-align: justify;">Como empresa  de servicios buscamos ofrecer, en todo el Paraguay, soluciones mediante fumigación y control de plagas, contra infestaciones de insectos (cucarachas, hormigas, termitas o kupi´i, moscas) y roedores, también, ofrecemos servicios de desinfección de superficies en diversos ambientes industriales y comerciales.</p>    
                     </div>
                     <div class="col-lg-6">
                         <iframe  data-wow-delay="0.5s" width="560" height="315" src="https://www.youtube.com/embed/hKs0NntZgOc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
