--- a/project.html
+++ b/project.html
@@ -232,6 +232,9 @@
             </div>
         </footer>
         <!-- Footer End -->
+        <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank">
+            <i class="bi bi-whatsapp wsize"></i>
+        </a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
