--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <img src="img/termitas.jpg" alt="termitas kupii" width="130%" >
                             </div>
                             <h5 class="mb-3">Fumigacion y control de termitas en Paraguay</h5>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Saber más</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="termitas.html">Saber más</a>
                         </article>
                     </div>
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
