--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <body>
 
-        <!-- Navbar & Hero Start -->
+    <main><!-- Navbar & Hero Start -->
         <header class="container-fluid p-0 fondo-blanco" >
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0" style="background-color: white;">
                 <a href="" class="navbar-brand p-0">
@@ -163,11 +163,10 @@
             </div>
         </footer>
         <!-- Footer End -->
-
-
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
-    </div>
+        <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank">
+            <i class="bi bi-whatsapp wsize"></i>
+        </a>
+    </main>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
