--- a/project.html
+++ b/project.html
@@ -190,7 +190,7 @@
         </section>
 
         <!-- Footer Start -->
-        <div class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
+        <footer class="container-fluid text-light footer mt-5 pt-5 wow fadeIn footerbg" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -235,6 +235,7 @@
         <a href="https://wa.me/+595983948371?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." class="btn btn-lg btn-green btn-lg-square floating-whatsapp pt-2" target="_blank">
             <i class="bi bi-whatsapp wsize"></i>
         </a>
+    </section>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
