--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- Service End -->
 
         <!-- Newsletter Start -->
-        <article class="container-fluid newsletter my-5 wow fadeInUp bg-light" data-wow-delay="0.1s">
+        <section class="container-fluid newsletter my-5 wow fadeInUp bg-light" data-wow-delay="0.1s">
             <div class="container px-lg-5">
                 <div class="row align-items-center" style="height: 450px;">
                     <div class="col-md-4 text-center mb-n5 d-none d-md-block">
@@ -154,7 +154,7 @@
                     </article>
                 </div>
             </div>
-        </article>
+        </section>
 
         <section class="container-xxl py-5">
             <div class="container px-lg-6">
@@ -172,7 +172,7 @@
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <article class="blog-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="blog-icon flex-shrink-0">
-                                <img src="img/cluster_control-de-plagas-urbanas.jpg" alt="plagas urbanas paraguay" width="110%" >
+                                <img src="img/cluster_control-de-plagas-urbanas.jpg" alt="plagas urbanas paraguay" width="100%" >
                             </div>
                             <h5 class="mb-3">Fumigación y control de plagas urbanas en Paraguay</h5>
                             <a class="btn px-3 mt-auto mx-auto" href="service.html">Saber más</a>
@@ -181,7 +181,7 @@
                     <div class="col-lg-3 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <article class="blog-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="blog-icon flex-shrink-0">
-                                <img src="img/termitas.jpg" alt="termitas kupii" width="130%" >
+                                <img src="img/termitas.jpg" alt="termitas kupii" width="100%" >
                             </div>
                             <h5 class="mb-3">Fumigacion y control de termitas en Paraguay</h5>
                             <a class="btn px-3 mt-auto mx-auto" href="termitas.html">Saber más</a>
@@ -196,9 +196,8 @@
                             <a class="btn px-3 mt-auto mx-auto" href="project.html">Saber más</a>
                         </article>
                     </div>
-
-                    </div>
                 </div>
+            </div>
         </section>
      
 
@@ -325,13 +324,13 @@
                             <div class="position-relative w-100 mt-3">
                                 <input name="email" class="form-control border-0 rounded-pill w-100" type="email" placeholder="Tu correo electrónico">
                                 <input name="Presupuesto" class="form-control border-0 rounded-pill w-100 mt-4" type="text" placeholder="Quiero un presupuesto">
-                                <button type="submit" class="btn btn-danger shadow-none position-absolute mt-4">Enviar correo</button>
+                                <button type="submit" class="btn btn-danger shadow-none mt-4">Enviar correo</button>
                             </div>
                         </form>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-3 mt-4">
                         <h5 class="text-primary mb-4">Ubicación</h5>
-                        <div class="position-relative w-100 mt-3">
+                        <div class="position-relative mt-3" style="max-width: 100%;">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d230823.41550307942!2d-57.470468999999994!3d-25.317107!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDIwJzMxLjAiUyA1N8KwMzAnNDcuMCJX!5e0!3m2!1ses!2sus!4v1711252481027!5m2!1ses!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
