--- a/control-insectos.html
+++ b/control-insectos.html
@@ -180,7 +180,7 @@
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-primary mb-4">Contáctanos</h5>
                         <p class="text-dark"><i class="fa fa-map-marker-alt me-3 text-primary"></i>Cerro Cora 326, San Lorenzo </p>
-                        <p class="text-dark"><i class="fa fa-phone-alt me-3 text-primary"></i>+595983 948371</p>
+                        <p class="text-dark"><i class="fa fa-phone-alt me-3 text-primary"></i>+595 983 948371</p>
                         <p class="text-dark"><i class="fa fa-envelope me-3 text-primary"></i>fumitecparaguay@gmail.com </p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social text-primary" href=""><i class="fab fa-twitter"></i></a>
@@ -202,8 +202,8 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mt-4">
                         <h5 class="text-primary mb-4">Ubicación</h5>
-                        <div class="position-relative mt-3" style="max-width: 100%;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d230823.41550307942!2d-57.470468999999994!3d-25.317107!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDIwJzMxLjAiUyA1N8KwMzAnNDcuMCJX!5e0!3m2!1ses!2sus!4v1711252481027!5m2!1ses!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div class="position-relative mt-3 map-container">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d230823.41550307942!2d-57.470468999999994!3d-25.317107!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDIwJzMxLjAiUyA1N8KwMzAnNDcuMCJX!5e0!3m2!1ses!2sus!4v1711252481027!5m2!1ses!2sus." style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
