--- a/termitas.html
+++ b/termitas.html
@@ -126,7 +126,7 @@
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-primary mb-4">Contáctanos</h5>
                         <p class="text-dark"><i class="fa fa-map-marker-alt me-3 text-primary"></i>Cerro Cora 326, San Lorenzo </p>
-                        <p class="text-dark"><i class="fa fa-phone-alt me-3 text-primary"></i>+595983 948371</p>
+                        <p class="text-dark"><i class="fa fa-phone-alt me-3 text-primary"></i>+595 983 948371</p>
                         <p class="text-dark"><i class="fa fa-envelope me-3 text-primary"></i>fumitecparaguay@gmail.com </p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social text-primary" href=""><i class="fab fa-twitter"></i></a>
