--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </nav>
             <section class="container-fluid hero-header mb-5 hero-header-img">
-                <div class="container my-5 py-5 px-0 px-lg-5">
+                <div class="contenedor2 my-5 py-5 px-0 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-lg-6">
                             <h1 class="text-primary mb-4 animated zoomIn hero-text-size"><em>Fumigación y control de plagas en paraguay</em></h1>
